--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoConnection": {
-    "ConnectionString": "mongodb+srv://ajeetkumar:C0##ect10n@sydney-rcgzs.mongodb.net/test?retryWrites=true&w=majority",
-    "Database": "VehicleDb"
+    "ConnectionString": "mongodb+srv://ajeetkumar:C0##ect10n@sydney-rcgzs.mongodb.net/Saimex?retryWrites=true&w=majority",
+    "Database": "Saimex"
   },
   "AppSettings": {
     "Secret": "hdftasdvjrlvfvfjyvwevfcmdfkjsdnhvzfmbnsdfvm"
